hydra/app/assets/stylesheets/blacklight.scss
@import 'bootstrap';
@import 'blacklight/blacklight';
@import "partials/variables";

.facet-values {
    text-align: left;
    a {
        text-decoration: none;
    }
}

.container {
    width: 100%;
    margin: 40px auto;
    .row {
        margin-left: 0;
    	margin-right: 0;
    	#content {
	    	p {
	    		line-height: 150%;
	    		color: $neutral-wgray1;
                text-align: left;
	    	}
            h2 {
                color: #1d2228;
                font-weight:300;
                font-size: 1.6em;
            }
            h3 {
                font-size: 1.5em;
                font-weight: 600;
            }
    	}
    }
}
.panel-default > .panel-heading {
    color: #333;
    background-color: $gray;
    border-color: darken($gray, 10%);
}
#appliedParams {
	background-color: $gray;
}
.text-success, .facet-values li .selected {
    color: $accent-orange3;
}

/* Documents */
#documents {
    .document {
        margin: 0 0 20px 0;
        border: none;
        width: 100%;
        float: left;
        border-bottom: none;
        .document-wrap {
            border: 1px solid #D9D9D9;
            width: 100%;
            height: 100%;
            .awrap {
                width: 100%;
                z-index: 2;
                position: relative;
                top: 0;
                left: 0;
            }
            .index-document-functions {
                float: left;
            }
            .documentHeader {
                margin: 0;
                h5 {
                    width: 100%;
                    text-align: left;
                    font-size: 1.25em;
                    font-weight: 300;
                }
                .index-document-functions {
                    .bookmark_toggle {
                        .toggle_bookmark {
                            padding: 0;
                            label {
                                floaT: LEFT;
                            }
                        }
                    }
                }
            }
        }
        .document-metadata {
            margin: 0;
            dd, dt {
                text-align: left;
                padding-left: 20px;
            }
        }
    }
}
.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, #search-navbar .search-query-form, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
    position: inherit;
}
.pagination {
    }
    #sortAndPerPage .pagination {
        margin: 0;
    }
    .col-md-12 {
        width: 100%;
    }
    .row .record-padding {
        display: inline-block !important;
        text-align: center;
    }
    .facet-limit-active .card-header .btn {
        color: black;
    }
    .bg-success, .facet-limit-active .card-header {
        background-color: $gray !important;


    }
    .facet-limit-active {
        --bs-border-opacity: 1;
        border-color: $gray !important;
    }
    .text-success, .facet-values li .selected{
        color: $accent-orange3 !important;
    }
    #bookmarks_nav {
        padding-right: 20px;
    }
    .container .row #content h3{
    font-weight: 300;
    text-align: left;
    font-size: 1rem;
    p{
        text-align: left;
    }
    a {
        text-decoration: none;
    }
 }
/*********************************************************************
    768px and up
**********************************************************************/
@media screen and (min-width: 768px) {
    .container {
        width: 100%;
        max-width: 100%;
        padding-left: 90px;
        padding-right: 90px;
    }
    #documents .document {
        width: 48%;
        margin: 0 1% 20px 1%;
        background: #FFF none repeat scroll 0% 0%;
        box-shadow: 0px 6px 6px -3px #DFDFDF;
    }
}

/*********************************************************************
    1600px and up
**********************************************************************/
@media screen and (min-width: 1366px) {
    #documents .document {
        width: 31%;
        margin: 0 1% 20px 1%;
    }
    .pagination {
        margin: 20px 10vw;
        }
}

